# thrift-pyi

./: .coverage  .coveragerc  .env  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.rst  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: lint-and-test.yml  lint.yml  publish.yml  test.yml
example/: README.md
example/app/: client.py  server.py
example/app/interfaces/: __init__.py  __init__.pyi  dates.pyi  shared.pyi  todo.pyi  todo_v2.pyi
example/interfaces/: dates.thrift  shared.thrift  todo.thrift  todo_v2.thrift  unions.thrift
example/output/: dates.pyi  todo.pyi
src/thriftpyi/: __main__.py  cli.py  compat.py  entities.py  factories.py  files.py  main.py  parsers.py  proxies.py  renderers.py  stubs.py  utils.py
src/thriftpyi/templates/: stub.html
tests/: test_cli.py  test_main.py  test_renderers.py  test_thriftpyi.py  test_utils.py
tests/cross_dir_interfaces/: parent.thrift
tests/cross_dir_interfaces/sub/: child.thrift
tests/cross_dir_stubs/expected/frozen/: child.pyi  parent.pyi
tests/cross_dir_stubs/expected/frozen_kw_only/: child.pyi  parent.pyi
tests/cross_dir_stubs/expected/frozen_kw_only_sync/: child.pyi  parent.pyi
tests/cross_dir_stubs/expected/kw_only/: child.pyi  parent.pyi
tests/cross_dir_stubs/expected/optional/: child.pyi  parent.pyi
tests/stubs/actual/: __init__.pyi  shared.pyi  todo.pyi
tests/stubs/expected/: __init__.pyi  dates.pyi  shared.pyi  todo.pyi
tests/stubs/expected/async/: shared.pyi  todo.pyi
tests/stubs/expected/cross_dir/: __init__.pyi  child.pyi  parent.pyi
tests/stubs/expected/frozen/: dates.pyi  shared.pyi  todo.pyi  unions.pyi
tests/stubs/expected/frozen_kw_only/: dates.pyi  shared.pyi  todo.pyi  todo_v2.pyi  unions.pyi
tests/stubs/expected/frozen_kw_only_sync/: _typedefs.pyi  dates.pyi  shared.pyi  todo.pyi  todo_v2.pyi  unions.pyi
tests/stubs/expected/kw_only/: dates.pyi  shared.pyi  todo.pyi  unions.pyi
tests/stubs/expected/optional/: __init__.pyi  dates.pyi  shared.pyi  todo.pyi  unions.pyi
tests/stubs/expected/sync/: __init__.pyi  _typedefs.pyi  dates.pyi  shared.pyi  todo.pyi  todo_v2.pyi  unions.pyi
