[tool.poetry]
name = "thrift-pyi"
version = "0.2.1"
description = "This is simple `.pyi` stubs generator from thrift interfaces"
readme = "README.rst"
repository = "https://github.com/unmade/thrift-pyi"
authors = ["Aleksei Maslakov <lesha.maslakov@gmail.com>"]
license = "MIT"
packages = [
    { include = "thriftpyi", from = "src" },
]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
]

[tool.poetry.scripts]
thriftpyi = "thriftpyi.cli:main"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
jinja2 = "^2.10"
black = "^19.3b0"
thriftpy2 = "^0.4.2"
autoflake = "^1.3"

[tool.poetry.dev-dependencies]
tox = "^3.12"
pre-commit = "^1.16"
mypy = "^0.701.0"
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
