[tool.poetry]
name = "thrift-pyi"
version = "0.6.0"
description = "This is simple `.pyi` stubs generator from thrift interfaces"
readme = "README.rst"
repository = "https://github.com/unmade/thrift-pyi"
authors = ["Aleksei Maslakov <lesha.maslakov@gmail.com>"]
license = "MIT"
packages = [
    { include = "thriftpyi", from = "src" },
]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
]

[tool.poetry.scripts]
thriftpyi = "thriftpyi.cli:main"

[tool.poetry.dependencies]
python = "^3.7"
astunparse = {version = "^1.6.3", python = "< 3.9.0" }
autoflake = "*"
black = "*"
thriftpy2 = "^0.4.2"

[tool.poetry.dev-dependencies]
tox = "^3.24"
pre-commit = "^2.20"
mypy = "^0.971"
pylint = [
    {version = ">=2.13.9,<2.14.0", python = ">= 3.7.0, < 3.7.2"},
    {version = "^2.15", python = ">= 3.7.2, < 4.0.0"},
]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
