[tool.poetry]
name = "thrift-pyi"
version = "1.2.0"
description = "This is simple `.pyi` stubs generator from thrift interfaces"
readme = "README.rst"
repository = "https://github.com/unmade/thrift-pyi"
authors = ["Aleksei Maslakov <lesha.maslakov@gmail.com>"]
license = "MIT"
packages = [
    { include = "thriftpyi", from = "src" },
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
]

[tool.poetry.scripts]
thriftpyi = "thriftpyi.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
autoflake = "*"
black = "*"
thriftpy2 = "^0.4.2"

[tool.poetry.dev-dependencies]
tox = "^3.24"
pre-commit = "^2.20"
mypy = "^1.12"
pylint = "^3.3"
pytest = "^8.3"
pytest-cov = "^5.0"


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
